--- a/EzGazilli/EzGazilli.tex
+++ b/EzGazilli/EzGazilli.tex
@@ -99,8 +99,8 @@ właśnie ten przypadek... A nawet jeśli, to i tak jest mało miejsca!
     \item 2\hearts\ = 2-3 \hearts, 4-7
     \item 2\spades\ = 5\clubs5\diams \vimp
     \item 2\nt\ = Krótsza niż 5-5 karta na młodych z max. singlem \hearts \imp
-    \item 3\clubs\ = NAT 6+ 5-7
-    \item 3\diams\ = NAT 6+ 5-7
+    \item 3\clubs\ = \nat 6+ 5-7
+    \item 3\diams\ = \nat 6+ 5-7
 \end{itemize}
 
 \subsection*{1\hearts\ --- 1\ntx \\ 2\clubs\ --- 2\diams \\ ?}
