--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -43,7 +43,7 @@
     \item 2\nt = mini splinter
     \item 3\clubs = solid 6\clubs, \inv
     \item 3\diams = solid 6\diams, \inv
-    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\hearts = 3+\spades, \inv
     \item 3\spades = mixed raise
     \item 3\nt = splinter \hearts
     \item 4\clubs = splinter \clubs
