--- a/KrysiaBartek2024/source/1ntOpening.tex
+++ b/KrysiaBartek2024/source/1ntOpening.tex
@@ -15,15 +15,15 @@
 %%% TITLE: 1\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-1\nt\ opening = (14)15-17 BAL
+1\nt\ opening = (14)15-17 \bal
 
 \subsubsection*{1\ntx\ -- ?}
 \begin{itemize}
     \item 2\clubs\ = Stayman
     \item 2\diams\ = forces 2\hearts
     \item 2\hearts\ = forces 2\spades
-    \item 2\spades\ = inv or $\rightarrow$ \clubs
-    \item 2\nt\ = $\rightarrow$ \diams
+    \item 2\spades\ = \inv or \trsf{\clubs}
+    \item 2\nt\ = \trsf{\diams}
     \item 3\clubs\ = Puppet Stayman
     \item 3\diams\ = 55\minor
     \item 3\hearts\ = 3-\spades1-\hearts, 54\minor
@@ -31,7 +31,7 @@
     \item 3\nt\ = to play
     \item 4\clubs\ = 55\major
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\spades \\ ?}
@@ -48,7 +48,7 @@
 
 \subsubsection*{1\ntx\ -- 3\hearts \\ ?}
 \begin{itemize}
-    \item 3\spades\ = NAT
+    \item 3\spades\ = \nat
     \item 3\nt\ = to play
     \item 4\hearts\ = exclusion, choose \minor
     \item 4\nt\ = choose \minor
@@ -67,13 +67,13 @@
 \subsubsection*{1\ntx\ -- 2\diams \\
                 2\hearts\ -- ?}
 \begin{itemize}
-    \item 2\spades\ = 5\hearts4\spades, inv
+    \item 2\spades\ = 5\hearts4\spades, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\hearts \\
                 2\spades\ -- ?}
 \begin{itemize}
-    \item 3\hearts\ = 5\spades4\hearts, inv
+    \item 3\hearts\ = 5\spades4\hearts, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\diams \\
