--- a/KrysiaBartek2024/source/checkback3c.tex
+++ b/KrysiaBartek2024/source/checkback3c.tex
@@ -5,22 +5,25 @@
 \usepackage{enumitem}
 \setmainlanguage{english}
 
-\title{Gadget 3\clubs}
+\title{Checkback 3\clubs}
 \author{Krystyna Gasińska}
 \begin{document}
 \maketitle
 
 %%% ID: 20
 %%% PRIORITY: 78
-%%% TITLE: Gadget 3\clubs
+%%% TITLE: Checkback 3\clubs
 %%% SYSTEM BEGIN %%%
+
+Checkback 3\clubs is not forced and does not promise 5th card of the suit.
+It does not deny 3/4\diams.
 
 \subsubsection*{1\clubs -- 1\spades \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 4+\diams
     \item 3\hearts = 5\spades4\hearts
-    \item 3\spades = fixing \spades
+    \item 3\spades = agreeing \spades
 \end{itemize}
 
 \subsubsection*{1\clubs -- 1\spades \\ 2\nt -- 3\clubs}
@@ -34,9 +37,9 @@
 
 \subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 4+\diams
-    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\hearts = 5\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
@@ -51,10 +54,10 @@
 
 \subsubsection*{1\diams -- 1\spades \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 3+\diams
     \item 3\hearts = 5\spades4\hearts
-    \item 3\spades = fixing \spades
+    \item 3\spades = agreeing \spades
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\spades \\ 2\nt -- 3\clubs}
@@ -68,13 +71,13 @@
 
 \subsubsection*{1\diams -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 3+\diams
-    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\hearts = 5\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
-\subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- 3\clubs}
+\subsubsection*{1\diams -- 1\hearts \\ 2\nt -- 3\clubs}
 \begin{itemize}
     \item 3\diams = 6\diams, no 3\hearts4
     \item 3\hearts = 3\hearts
