--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -17,16 +17,16 @@
 
 \subsubsection*{(2\diams) -- ?}
 \begin{itemize}
-    \item \dbl = (13)14-16 BAL, no 5M, may have minor singleton
+    \item \dbl = (13)14-16 \bal, no 5\majs, may have minor singleton \vimp
     \item 2\hearts = 11-15, 5+\hearts
     \item 2\spades = 11-15, 5+\spades
-    \item 2\nt = 17-19, BAL, may have 5M
+    \item 2\nt = 17-19, \bal, may have 5\majs \imp
     \item 3\clubs = \clubs, not 5332/5422
     \item 3\diams = \diams, not 5332/5422
     \item 3\hearts, 3\spades = solid suit, weaker then power double
-    \item 3\nt = minors
-    \item 4\clubs = \clubs + \major
-    \item 4\diams = \diams + \major
+    \item 3\nt = \minor \vimp
+    \item 4\clubs = \clubs+\major
+    \item 4\diams = \diams+\major
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (P\alrts) -- ?}
@@ -35,16 +35,16 @@ System like after 2\diams preempt.
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
 \begin{itemize}
     \item \pass = no suitable call OR takeout with \spades shortness
-    \item \dbl = 14-16 BAL \vimp
+    \item \dbl = 14-16 \bal \vimp
     \item 2\spades = 11-15, 5+\spades, may be solid 4\spades with 1-\hearts
-    \item 2\nt = 17-19, BAL
+    \item 2\nt = 17-19, \bal
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (2\spades) -- ?}
 \begin{itemize}
-    \item \pass = no suitable call OR takeout with \hearts shortness
+    \item \pass = no suitable call OR takeout with \hearts shortness \imp
     \item \dbl = takeout with \spades shortness \imp
-    \item 2\nt = 17-19, BAL
+    \item 2\nt = 17-19, \bal
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (>2\spades) -- ?}
@@ -55,7 +55,7 @@ System like after 2\diams preempt.
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
                 (P) -- ?}        
 \begin{itemize}
-    \item 2\nt = minors
+    \item 2\nt = \minor
 \end{itemize}
 
 \subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- ?}        
@@ -63,10 +63,10 @@ System like after 2\diams preempt.
     \item \pass = want to defend, doubles are penalty
     \item 2\major = 5+\major, to play
     \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
-    \item 3\spades = $\rightarrow$ \nt, no \major stoppers
+    \item 3\clubs = Stayman \vimp
+    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
+    \item 3\spades = \trsf{\nt}, no \major stoppers
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
 
@@ -74,17 +74,17 @@ System like after 2\diams preempt.
                 (P) -- 3\clubs -- (P) -- ?}        
 \begin{itemize}
     \item \pass = to play
-    \item 3\diams = \gf, no 4\majs
+    \item 3\diams = \gf, no 4\majs \vimp
     \item 3\hearts, 3\spades = \inv
 \end{itemize}
 
 \subsubsection*{(2\diams) -- \dbl -- (\hearts/\spades) -- ?}        
 \begin{itemize}
-    \item \dbl = 9+, \ftwon to 2\nt, no 5\major, no \major shortness
+    \item \dbl = 9+, \fton{2\nt}, no 5\major, no \major shortness
     \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
+    \item 3\clubs = Stayman \vimp
+    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
     \item 3\spades = takeout with opps' suit shortness, \gf
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
@@ -101,10 +101,10 @@ System like after 2\diams preempt.
 \begin{itemize}
     \item \pass = to play
     \item 2\spades = 4\spades, \fonce
-    \item 2\nt = NAT, minimum
-    \item 3\clubs = NAT, minimum
-    \item 3\diams = NAT, minimum
-    \item 3\hearts over 2\spades = NAT, minimum
+    \item 2\nt = \nat, minimum
+    \item 3\clubs = \nat, minimum
+    \item 3\diams = \nat, minimum
+    \item 3\hearts over 2\spades = \nat, minimum
     \item cue 3\hearts, 3\spades = maximum, no stopper, no 4\spades
     \item 3\nt = maximum, stopper, no 4\spades
 \end{itemize}
@@ -115,9 +115,9 @@ System like after 2\diams preempt.
     \item \pass = \fonce
     \item \dbl = penalty
     \item 2\nt = do not want to defend, \gf
-    \item 3\clubs = NAT, \gf
-    \item 3\diams = NAT, \gf
-    \item 3\hearts = NAT, \gf
+    \item 3\clubs = \nat, \gf
+    \item 3\diams = \nat, \gf
+    \item 3\hearts = \nat, \gf
     \item 3\spades = maximum, no \spades stopper
     \item 3\nt = maximum, stopper
 \end{itemize}
