--- a/KrysiaBartek2024/source/dealingWithPreempts.tex
+++ b/KrysiaBartek2024/source/dealingWithPreempts.tex
@@ -18,9 +18,9 @@
 \subsubsection*{(2\hearts) -- ?}
 \begin{itemize}
     \item 3\spades = strong hand, solid suit
-    \item 3\hearts = Michaels, \ftwon to 4\anysuit{x}
+    \item 3\hearts = Michaels
     \item 4\clubs/4\diams = Leaping Michaels, \gf
-    \item 4\hearts = \minor, strong
+    \item 4\hearts = \minor, strong \vimp
     \item 4\nt = \minor, weaker then 4\hearts
 \end{itemize}
 
@@ -33,7 +33,7 @@
     \item 3\hearts = no 4\spades, no \hearts stopper
     \item 3\spades = 5\spades, \inv (8-11) \imp
     \item 3\nt = no 4\spades, \hearts stopper
-    \item 4\hearts = \minor, no \hearts control, Slam Try
+    \item 4\hearts = \minor, no \hearts control, Slam Try \vimp
     \item 4\spades = to play
 \end{itemize}
 
@@ -53,7 +53,7 @@
 
 \subsubsection*{(2\spades) -- ?}
 \begin{itemize}
-    \item 3\spades = Michaels, \ftwon to 4\anysuit{x}
+    \item 3\spades = Michaels
     \item 4\clubs/4\diams = Leaping Michaels, \gf
     \item 4\spades = \minor, strong
     \item 4\nt = \minor, weaker then 4\hearts
@@ -67,7 +67,7 @@
     \item 3\spades = no 4\hearts, no \spades stopper
     \item 3\nt = no 4\hearts, \spades stopper
     \item 4\hearts = to play
-    \item 4\hearts = \minor, no \spades control, Slam Try
+    \item 4\hearts = \minor, no \spades control, Slam Try \vimp
 \end{itemize}
 
 \subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
