--- a/KrysiaBartek2024/source/krysia_bartek_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_bartek_strefa.tex
@@ -76,12 +76,12 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 5+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- ?}
@@ -89,29 +89,30 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 4+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 2\clubs \\ ?}
 \begin{itemize}
-    \item 2\diams\ = BAL
-    \item 2\hearts\ = 5\clubs4\hearts\ UNBAL
-    \item 2\spades\ = 5\clubs4\spades\ UNBAL
-    \item 2\nt\ = 5\clubs4\diams\ UNBAL
-    \item 3\clubs\ = \clubs\ UNBAL
+    \item 2\diams\ = \bal
+    \item 2\hearts\ = 5\clubs4\hearts\ \unbal
+    \item 2\spades\ = 5\clubs4\spades\ \unbal
+    \item 2\nt\ = 5\clubs4\diams\ \unbal
+    \item 3\clubs\ = \clubs\ \unbal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = \hearts\ stopper
     \item 2\spades\ = \spades\ stopper
-    \item 2\nt\ = \clubs\ stopper
-    \item 3\clubs\ = sign off (treshold for invite)
+    \item 2\nt\ = both major stoppers
+    \item 3\clubs = \nat
+    \item 3\diams = sign off (treshold for invite)
 \end{itemize}
 
 bidding higher suit denies lower stopper
@@ -123,7 +124,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 5+\clubs\ min
     \item 3\diams\ = 5+\diams\ \gf
     \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
@@ -133,7 +134,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\diams\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 4+\clubs\ min
     \item 3\diams\ = 5+\diams\ min
     \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
@@ -182,7 +183,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 2\nt = mini splinter
     \item 3\clubs = solid 6\clubs, \inv
     \item 3\diams = solid 6\diams, \inv
-    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\hearts = 3+\spades, \inv
     \item 3\spades = mixed raise
     \item 3\nt = splinter \hearts
     \item 4\clubs = splinter \clubs
@@ -192,15 +193,15 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \section{\texorpdfstring{1\ntx\ opening}{1ntOpening}}\label{sec:1ntOpening}
 
-1\nt\ opening = (14)15-17 BAL
+1\nt\ opening = (14)15-17 \bal
 
 \subsubsection*{1\ntx\ -- ?}
 \begin{itemize}
     \item 2\clubs\ = Stayman
     \item 2\diams\ = forces 2\hearts
     \item 2\hearts\ = forces 2\spades
-    \item 2\spades\ = inv or $\rightarrow$ \clubs
-    \item 2\nt\ = $\rightarrow$ \diams
+    \item 2\spades\ = \inv or \trsf{\clubs}
+    \item 2\nt\ = \trsf{\diams}
     \item 3\clubs\ = Puppet Stayman
     \item 3\diams\ = 55\minor
     \item 3\hearts\ = 3-\spades1-\hearts, 54\minor
@@ -208,7 +209,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 3\nt\ = to play
     \item 4\clubs\ = 55\major
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\spades \\ ?}
@@ -225,7 +226,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \subsubsection*{1\ntx\ -- 3\hearts \\ ?}
 \begin{itemize}
-    \item 3\spades\ = NAT
+    \item 3\spades\ = \nat
     \item 3\nt\ = to play
     \item 4\hearts\ = exclusion, choose \minor
     \item 4\nt\ = choose \minor
@@ -244,13 +245,13 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \subsubsection*{1\ntx\ -- 2\diams \\
                 2\hearts\ -- ?}
 \begin{itemize}
-    \item 2\spades\ = 5\hearts4\spades, inv
+    \item 2\spades\ = 5\hearts4\spades, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\hearts \\
                 2\spades\ -- ?}
 \begin{itemize}
-    \item 3\hearts\ = 5\spades4\hearts, inv
+    \item 3\hearts\ = 5\spades4\hearts, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\diams \\
@@ -299,7 +300,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
 \begin{itemize}
     \item 2\hearts\ = \pass/correct
-    \item 2\spades\ = inv with \hearts
+    \item 2\spades\ = \inv with \hearts
 \end{itemize}
 
 \section{\texorpdfstring{1\ntx\ -- dealing with interference}{1ntInterference}}\label{sec:1ntInterference}
@@ -326,10 +327,10 @@ SYSTEM ON
     \item \dbl\ = negative
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\hearts, inv+
-    \item 3\diams\ = 1-\diams, inv+
-    \item 3\hearts\ = 5+\spades, inv+
-    \item 3\spades\ = 5+\clubs, inv+
+    \item 3\clubs\ = 5+\hearts, \inv+
+    \item 3\diams\ = 1-\diams, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\spades\ = 5+\clubs, \inv+
     \item 3\nt\ = no \diams\ stopper
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
@@ -340,9 +341,9 @@ SYSTEM ON
     \item \dbl\ = 8+
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
     \item 3\spades\ = 5/5 \minor
     \item 3\nt\ = to play
     \item 4\diams, 4\hearts\ = Texas
@@ -354,9 +355,9 @@ SYSTEM ON
     \item \dbl\ = negative
     \item 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\spades, inv+
-    \item 3\hearts\ = 1-\hearts, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\spades, \inv+
+    \item 3\hearts\ = 1-\hearts, \inv+
     \item 3\spades\ = 55 \minor, \gf
     \item 3\nt\ = no \hearts\ stopper
     \item 4\hearts\ = Texas
@@ -366,10 +367,10 @@ SYSTEM ON
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\hearts, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\hearts, \inv+
     \item 3\hearts\ = 55 \minor, \gf
-    \item 3\spades\ = 1-\spades, inv+
+    \item 3\spades\ = 1-\spades, \inv+
     \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
@@ -379,23 +380,23 @@ SYSTEM ON
 \begin{itemize}
     \item \dbl\ = 10+
     \item 3\clubs\ = Stayman
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\clubs) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
-    \item 3\spades\ = 5+\diams, inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\spades\ = 5+\diams, \inv+
     \item 3\nt\ = to play
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\hearts\ = 5+\spades, \inv+
     \item 3\spades\ = 5+\hearts, \gf
     \item 3\nt\ = to play
 \end{itemize}
@@ -425,7 +426,7 @@ SYSTEM ON
 
 \section{\texorpdfstring{2\ntx\ opening}{2ntOpening}}\label{sec:2ntOpening}
 
-2\nt\alrts opening = 21-22 BAL, may have 5\majs
+2\nt\alrts opening = 21-22 \bal, may have 5\majs
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
@@ -436,7 +437,7 @@ SYSTEM ON
     \item 3\nt\ = 5\spades4\hearts
     \item 4\clubs\ = 55 \majs
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 % should 3s and 3nt be switched?
@@ -477,7 +478,7 @@ SYSTEM ON
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt = Two Tiered Splinters 4+\majs (unspecified singleton, (10)11\dps)
+    \item 3\nt = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
@@ -485,7 +486,7 @@ SYSTEM ON
 \begin{itemize}
     \item 2\hearts = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 2\spades/3\clubs/3\diams = 55(54) Slam Try
     \item 3\spades/4\clubs/4\diams = splinter
     \item 4\hearts = to play
@@ -495,7 +496,7 @@ SYSTEM ON
 \begin{itemize}
     \item 2\spades = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 3\clubs/3\diams/3\hearts = 55(54) Slam Try
     \item 4\clubs/4\diams/4\hearts = splinter
     \item 4\spades = to play
@@ -503,17 +504,17 @@ SYSTEM ON
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\majs \\ ?}
 \begin{itemize}
-    \item 3\anysuit{x} = NAT, unspecified singleton, +4-fit \majs support
+    \item 3\anysuit{x} = \nat, unspecified singleton, +4-fit \majs support
 \end{itemize}
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts over 2\spades = Last Train (says nothing about \hearts)
     \item 2\majs = \soff
-    \item 2\nt = 11, BAL
+    \item 2\nt = 11, \bal
     \item 3\majs = 4-card support
     \item 4\majs = to play
-    \item any other bid = NAT, \inv
+    \item any other bid = \nat, \inv
 \end{itemize}
 
 \section{\texorpdfstring{Non Serious 3\ntx}{nonSerious3nt}}\label{sec:nonSerious3nt}
@@ -579,16 +580,16 @@ forces partner to show their cue.
 \begin{itemize}
     \item \pass\ = good \hearts
     \item 2\spades\ = 5+, \fonce
-    \item 2\nt\ = min BAL, \nf
+    \item 2\nt\ = min, \bal, \nf
 \end{itemize}
 
 any other bid = \gf
 
 \subsubsection*{2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
-    \item 2\nt\ = min BAL
-    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, UNBAL
-    \item 3\hearts, 3\spades, 4\clubs, 4\diams = suit fixed
+    \item 2\nt\ = min, \bal
+    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, \unbal
+    \item 3\hearts, 3\spades, 4\clubs, 4\diams = agreeing suit
 \end{itemize}
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 2\nt\ -- ?}
@@ -638,9 +639,9 @@ System as after 2\nt\ opening
 \subsubsection*{(2\hearts) -- ?}
 \begin{itemize}
     \item 3\spades = strong hand, solid suit
-    \item 3\hearts = Michaels, \ftwon to 4\anysuit{x}
+    \item 3\hearts = Michaels
     \item 4\clubs/4\diams = Leaping Michaels, \gf
-    \item 4\hearts = \minor, strong
+    \item 4\hearts = \minor, strong \vimp
     \item 4\nt = \minor, weaker then 4\hearts
 \end{itemize}
 
@@ -653,7 +654,7 @@ System as after 2\nt\ opening
     \item 3\hearts = no 4\spades, no \hearts stopper
     \item 3\spades = 5\spades, \inv (8-11) \imp
     \item 3\nt = no 4\spades, \hearts stopper
-    \item 4\hearts = \minor, no \hearts control, Slam Try
+    \item 4\hearts = \minor, no \hearts control, Slam Try \vimp
     \item 4\spades = to play
 \end{itemize}
 
@@ -673,7 +674,7 @@ System as after 2\nt\ opening
 
 \subsubsection*{(2\spades) -- ?}
 \begin{itemize}
-    \item 3\spades = Michaels, \ftwon to 4\anysuit{x}
+    \item 3\spades = Michaels
     \item 4\clubs/4\diams = Leaping Michaels, \gf
     \item 4\spades = \minor, strong
     \item 4\nt = \minor, weaker then 4\hearts
@@ -687,7 +688,7 @@ System as after 2\nt\ opening
     \item 3\spades = no 4\hearts, no \spades stopper
     \item 3\nt = no 4\hearts, \spades stopper
     \item 4\hearts = to play
-    \item 4\hearts = \minor, no \spades control, Slam Try
+    \item 4\hearts = \minor, no \spades control, Slam Try \vimp
 \end{itemize}
 
 \subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
@@ -755,7 +756,7 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
     \item 2\ntx\ = 6\hearts5\minor\ \gf
     \item 3\clubs\ = 5\hearts5\clubs\ \gf
     \item 3\diams\ = 5\hearts5\diams\ \gf
-    \item 3\hearts\ = fixes \hearts\ \gf
+    \item 3\hearts\ = agreeing \hearts\ \gf
 \end{itemize}
 
 \subsubsection*{1\spades\ -- 1\ntx\ \\ ?}
@@ -769,7 +770,7 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
     \item 3\clubs\ = 5\spades5\clubs\ \gf
     \item 3\diams\ = 5\spades5\diams\ \gf
     \item 3\hearts\ = 6\spades5\hearts\ \gf
-    \item 3\spades\ = fixes \spades\ \gf
+    \item 3\spades\ = agreeing \spades\ \gf
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- ?}
@@ -841,13 +842,13 @@ any shortness 9-11, 4-card support, not \gf!
 \subsubsection*{1\hearts\ -- ?}
 \begin{itemize}
     \item 2\spades\ = mini splinter
-    \item 2\nt\ = inv + fit
+    \item 2\nt\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\spades\ -- ?}
 \begin{itemize}
     \item 2\nt\ = mini splinter
-    \item 3\hearts\ = inv + fit
+    \item 3\hearts\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 2\spades \\ ?}
@@ -880,33 +881,49 @@ any shortness 9-11, 4-card support, not \gf!
 
 \subsubsection*{1\hearts -- (\dbl) -- ?}
 \begin{itemize}
-    \item \rdbl = 10+
-    \item 1\spades = NAT, 4+\spades, \fonce
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
+    \item \rdbl = 10+ (may have 3\hearts)
+    \item 1\spades = \nat, 4+\spades, \fonce
+    \item 1\nt = \trsf{2\clubs}
+    \item 2\clubs = \trsf{2\diams}
+    \item 2\diams = \trsf{2\hearts}, constructive 8-10
     \item 2\hearts = 4-7, 3\hearts
+    \item 2\spades = \spades shortness, 4\hearts, 7-10, \inv \vimp
+    \item 2\nt = 4\hearts \inv \vimp
+    \item 3\clubs = \clubs+(3)4\hearts \inv \vimp
     \item 3\diams = 4+\hearts, 6-9
-    \item 3\hearts = 0-6 \hcp
+    \item 3\hearts = 4+\hearts, 0-5 \hcp
+    \item 3\spades = 4+\hearts, unspecified singleton \vimp
+    \item 3\nt = 4+\hearts, void \spades
+    \item 4\clubs = 4+\hearts, void \clubs
+    \item 4\diams = 4+\hearts, void \diams
+    \item 4\hearts = to play
 \end{itemize}
 
 \subsubsection*{1\spades -- (\dbl) -- ?}
 \begin{itemize}
-    \item \rdbl = 10+
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts
-    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
+    \item \rdbl = 10+ (may have 3\spades)
+    \item 1\nt = \trsf{ 2\clubs}
+    \item 2\clubs = \trsf{2\diams}
+    \item 2\diams = \trsf{2\hearts}
+    \item 2\hearts = \trsf{2\spades}, constructive 8-10
     \item 2\spades = 4-7, 3\spades
+    \item 2\nt = 4\spades \inv \vimp
+    \item 3\clubs = \clubs+(3)4\spades \inv \vimp
+    \item 3\diams = \diams+(3)4\spades \inv \vimp
     \item 3\hearts = 4+\spades, 6-9
-    \item 3\spades = 0-6 \hcp
+    \item 3\spades = 4+\spades, 0-5 \hcp
+    \item 3\nt =  4+\spades, unspecified singleton \vimp
+    \item 4\clubs = 4+\spades, void \clubs
+    \item 4\diams = 4+\spades, void \diams
+    \item 4\hearts = 4+\spades, void \hearts
+    \item 4\spades = to play
 \end{itemize}
 
 \section{\texorpdfstring{2\ntx\ overcall after major preempt}{preempt2nt}}\label{sec:preempt2nt}
 
 \subsubsection*{(2\majs) -- ?}
 \begin{itemize}
-    \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
+    \item 2\nt\ = 16-18 \bal, promises \majs\ stopper
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
@@ -962,13 +979,13 @@ any shortness 9-11, 4-card support, not \gf!
 \begin{itemize}
     \item \pass = weak, 5+\spades
     \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
+    \item 4\clubs/4\diams = \nat
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\spades \\
                 (P) -- 3\nt -- (P) -- ?}
 \begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\clubs/4\diams = \nat, agreeing suit
     \item 4\hearts = 1\spades, both minors
     \item 4\spades = void \spades, both minors
 \end{itemize}
@@ -1025,13 +1042,13 @@ any shortness 9-11, 4-card support, not \gf!
 \begin{itemize}
     \item \pass = weak, 5+\hearts
     \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
+    \item 4\clubs/4\diams = \nat
 \end{itemize}
 
 \subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\clubs/4\diams = \nat, agreeing suit
     \item 4\hearts = 1\spades both minors
     \item 4\spades = void \spades both minors
 \end{itemize}
@@ -1064,16 +1081,16 @@ any shortness 9-11, 4-card support, not \gf!
 
 \subsubsection*{(2\diams) -- ?}
 \begin{itemize}
-    \item \dbl = (13)14-16 BAL, no 5M, may have minor singleton
+    \item \dbl = (13)14-16 \bal, no 5\majs, may have minor singleton \vimp
     \item 2\hearts = 11-15, 5+\hearts
     \item 2\spades = 11-15, 5+\spades
-    \item 2\nt = 17-19, BAL, may have 5M
+    \item 2\nt = 17-19, \bal, may have 5\majs \imp
     \item 3\clubs = \clubs, not 5332/5422
     \item 3\diams = \diams, not 5332/5422
     \item 3\hearts, 3\spades = solid suit, weaker then power double
-    \item 3\nt = minors
-    \item 4\clubs = \clubs + \major
-    \item 4\diams = \diams + \major
+    \item 3\nt = \minor \vimp
+    \item 4\clubs = \clubs+\major
+    \item 4\diams = \diams+\major
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (P\alrts) -- ?}
@@ -1082,16 +1099,16 @@ System like after 2\diams preempt.
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
 \begin{itemize}
     \item \pass = no suitable call OR takeout with \spades shortness
-    \item \dbl = 14-16 BAL \vimp
+    \item \dbl = 14-16 \bal \vimp
     \item 2\spades = 11-15, 5+\spades, may be solid 4\spades with 1-\hearts
-    \item 2\nt = 17-19, BAL
+    \item 2\nt = 17-19, \bal
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (2\spades) -- ?}
 \begin{itemize}
-    \item \pass = no suitable call OR takeout with \hearts shortness
+    \item \pass = no suitable call OR takeout with \hearts shortness \imp
     \item \dbl = takeout with \spades shortness \imp
-    \item 2\nt = 17-19, BAL
+    \item 2\nt = 17-19, \bal
 \end{itemize}
 
 \subsubsection*{(2\diams) -- P -- (>2\spades) -- ?}
@@ -1102,7 +1119,7 @@ System like after 2\diams preempt.
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
                 (P) -- ?}        
 \begin{itemize}
-    \item 2\nt = minors
+    \item 2\nt = \minor
 \end{itemize}
 
 \subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- ?}        
@@ -1110,10 +1127,10 @@ System like after 2\diams preempt.
     \item \pass = want to defend, doubles are penalty
     \item 2\major = 5+\major, to play
     \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
-    \item 3\spades = $\rightarrow$ \nt, no \major stoppers
+    \item 3\clubs = Stayman \vimp
+    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
+    \item 3\spades = \trsf{\nt}, no \major stoppers
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
 
@@ -1121,17 +1138,17 @@ System like after 2\diams preempt.
                 (P) -- 3\clubs -- (P) -- ?}        
 \begin{itemize}
     \item \pass = to play
-    \item 3\diams = \gf, no 4\majs
+    \item 3\diams = \gf, no 4\majs \vimp
     \item 3\hearts, 3\spades = \inv
 \end{itemize}
 
 \subsubsection*{(2\diams) -- \dbl -- (\hearts/\spades) -- ?}        
 \begin{itemize}
-    \item \dbl = 9+, \ftwon to 2\nt, no 5\major, no \major shortness
+    \item \dbl = 9+, \fton{2\nt}, no 5\major, no \major shortness
     \item 2\nt = Lebensohl (see below)
-    \item 3\clubs = Stayman
-    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
-    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
+    \item 3\clubs = Stayman \vimp
+    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
     \item 3\spades = takeout with opps' suit shortness, \gf
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
@@ -1148,10 +1165,10 @@ System like after 2\diams preempt.
 \begin{itemize}
     \item \pass = to play
     \item 2\spades = 4\spades, \fonce
-    \item 2\nt = NAT, minimum
-    \item 3\clubs = NAT, minimum
-    \item 3\diams = NAT, minimum
-    \item 3\hearts over 2\spades = NAT, minimum
+    \item 2\nt = \nat, minimum
+    \item 3\clubs = \nat, minimum
+    \item 3\diams = \nat, minimum
+    \item 3\hearts over 2\spades = \nat, minimum
     \item cue 3\hearts, 3\spades = maximum, no stopper, no 4\spades
     \item 3\nt = maximum, stopper, no 4\spades
 \end{itemize}
@@ -1162,9 +1179,9 @@ System like after 2\diams preempt.
     \item \pass = \fonce
     \item \dbl = penalty
     \item 2\nt = do not want to defend, \gf
-    \item 3\clubs = NAT, \gf
-    \item 3\diams = NAT, \gf
-    \item 3\hearts = NAT, \gf
+    \item 3\clubs = \nat, \gf
+    \item 3\diams = \nat, \gf
+    \item 3\hearts = \nat, \gf
     \item 3\spades = maximum, no \spades stopper
     \item 3\nt = maximum, stopper
 \end{itemize}
