--- a/KrysiaBartek2024/source/majorsAfterCheckback3c.tex
+++ b/KrysiaBartek2024/source/majorsAfterCheckback3c.tex
@@ -5,19 +5,19 @@
 \usepackage{enumitem}
 \setmainlanguage{english}
 
-\title{Majors after gadget}
+\title{Majors after checkback 3c}
 \author{Krystyna Gasińska}
 \begin{document}
 \maketitle
 
 %%% ID: 21
 %%% PRIORITY: 79
-%%% TITLE: Majors after gadget
+%%% TITLE: Majors after checkback 3c
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\minor -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\hearts = 5+\hearts4\spades OR fixing \hearts
+    \item 3\hearts = 5+\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
@@ -28,11 +28,18 @@
     \item 4\clubs/4\diams = 4\hearts, cue
 \end{itemize}
 
+\subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\hearts \\ 3\spades -- ?}
+\begin{itemize}
+    \item 3\nt = agreeing \hearts (6+)
+    \item 4\clubs/4\diams = agreeing \spades, cue
+    \item 4\hearts = to play
+\end{itemize}
+
 \subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\spades \\ ?}
 \begin{itemize}
     \item 3\nt = no 4\spades, no 4\hearts
-    \item 4\clubs = fixing \hearts
-    \item 4\diams = fixing \spades
+    \item 4\clubs = agreeing \hearts
+    \item 4\diams = agreeing \spades
 \end{itemize}
 
 %%% SYSTEM END %%%
