--- a/KrysiaBartek2024/source/otherBidsAndRules.tex
+++ b/KrysiaBartek2024/source/otherBidsAndRules.tex
@@ -67,7 +67,8 @@ minors or 3\clubs\ to show clubs.
 % to do: dealing with blackwood interference
 % gambling 3nt
 
-\section{Random bids}
+\definecolor{anti-flashwhite}{rgb}{0.95, 0.95, 0.96}
+\section{Random bids {\color{anti-flashwhite}logi z pierdolenia po piwie}}
 
 \begin{itemize}
 
@@ -79,10 +80,10 @@ minors or 3\clubs\ to show clubs.
 \item
 1\diams\ -- (1\spades) -- 2\spades 
 
-2\spades = \ftwon to 3\diams 
+2\spades = \fton{3\diams}
 
 \item
-(1\hearts) -- 1\dbl -- (1\nt) -- \dbl 
+(1\hearts) -- \dbl -- (1\nt) -- \dbl 
 
 \dbl = 9+
 
@@ -90,11 +91,6 @@ minors or 3\clubs\ to show clubs.
 (2\diams$^\text{6\major}$) -- 4\clubs -- (P) -- 4\spades
 
 4\spades = \pass with \spades, do not bid over 5\clubs with \hearts
-
-\item
-(2\diams$^\text{6\major}$) -- \dbl -- (P\alrts) -- ?
-
-3\diams, 3\hearts = $\rightarrow$ \hearts/\spades
 
 \item
 (2\diams$^\text{6\major}$) -- 3\nt
@@ -108,8 +104,8 @@ minors or 3\clubs\ to show clubs.
 \item 2\clubs -- 2\hearts \\ 3\nt -- ?
 
 \begin{itemize}
-\item 4\diams, 4\hearts = $\rightarrow$ \hearts/\spades
-\item 4\clubs = choose \major or bid 4\nt NAT
+\item 4\diams, 4\hearts = \trsf{\hearts/\spades}
+\item 4\clubs = choose \major or bid 4\nt \nat
 \end{itemize}
 
 \item Too weak for Michaels: \\
@@ -135,12 +131,6 @@ minors or 3\clubs\ to show clubs.
 (2\spades) -- 2\nt -- (P) -- 3\diams \\
 (P) -- 3\hearts -- (P) -- ?
 
-\item 
-(2\hearts) -- 2\nt -- (P) -- 3\diams \\
-(P) -- 4\diams -- (P) -- 4\nt
-
-4\nt = to play
-
 \item
 (2\spades) -- 2\nt -- (P) -- 3\clubs \\
 (P) -- 3\diams -- (P) -- 3\spades \\
@@ -149,14 +139,14 @@ minors or 3\clubs\ to show clubs.
 
 4\clubs = 5+\clubs
 \begin{itemize}
-    \item 4\diams = \clubs fixed
+    \item 4\diams = agreeing \clubs
     \item 4\hearts, 4\nt = to play
 \end{itemize}
 
 \item 
 (2\hearts) -- 2\nt -- (3\hearts) -- 4\hearts 
 
-4\hearts = $\rightarrow$ \spades
+4\hearts = \trsf{\spades}
 
 \item 
 1\clubs -- (1\spades) --\dbl -- (P) \\
