--- a/KrysiaBartek2024/source/overcalling1nt.tex
+++ b/KrysiaBartek2024/source/overcalling1nt.tex
@@ -43,7 +43,7 @@
 \subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
 \begin{itemize}
     \item 2\hearts\ = \pass/correct
-    \item 2\spades\ = inv with \hearts
+    \item 2\spades\ = \inv with \hearts
 \end{itemize}
 
 %%% SYSTEM END %%%
