--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -17,7 +17,7 @@
 
 \subsubsection*{(2\majs) -- ?}
 \begin{itemize}
-    \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
+    \item 2\nt\ = 16-18 \bal, promises \majs\ stopper
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
@@ -73,13 +73,13 @@
 \begin{itemize}
     \item \pass = weak, 5+\spades
     \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
+    \item 4\clubs/4\diams = \nat
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\spades \\
                 (P) -- 3\nt -- (P) -- ?}
 \begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\clubs/4\diams = \nat, agreeing suit
     \item 4\hearts = 1\spades, both minors
     \item 4\spades = void \spades, both minors
 \end{itemize}
@@ -136,13 +136,13 @@
 \begin{itemize}
     \item \pass = weak, 5+\hearts
     \item 3\nt = \pass/correct
-    \item 4\clubs/4\diams = NAT
+    \item 4\clubs/4\diams = \nat
 \end{itemize}
 
 \subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\clubs/4\diams = \nat, agreeing suit
     \item 4\hearts = 1\spades both minors
     \item 4\spades = void \spades both minors
 \end{itemize}
