--- a/Multi/multi.tex
+++ b/Multi/multi.tex
@@ -12,10 +12,10 @@
 \maketitle
 \section{Podstawowe odzywki}
 \begin{itemize}
-    \item \dbl\ = (13)14-16 BAL, wyklucza starszą piątkę. Młody singiel OK. \vimp
+    \item \dbl\ = (13)14-16 \bal, wyklucza starszą piątkę. Młody singiel OK. \vimp
     \item 2\hearts\ = \hearts
     \item 2\spades\ = \spades
-    \item 2\nt\ = 17-19 BAL, może zawierać starszą piątkę. \imp \br
+    \item 2\nt\ = 17-19 \bal, może zawierać starszą piątkę. \imp \br
     \item 3\clubs\ = \clubs, ale nie 5332/5422
     \item 3\diams\ = \diams, jw.
     \item 3\hearts, 3\spades\ = solidny kolor ale trochę za mało na objaśniaka
