--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -21,12 +21,12 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 5+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- ?}
@@ -34,29 +34,30 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 4+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 2\clubs \\ ?}
 \begin{itemize}
-    \item 2\diams\ = BAL
-    \item 2\hearts\ = 5\clubs4\hearts\ UNBAL
-    \item 2\spades\ = 5\clubs4\spades\ UNBAL
-    \item 2\nt\ = 5\clubs4\diams\ UNBAL
-    \item 3\clubs\ = \clubs\ UNBAL
+    \item 2\diams\ = \bal
+    \item 2\hearts\ = 5\clubs4\hearts\ \unbal
+    \item 2\spades\ = 5\clubs4\spades\ \unbal
+    \item 2\nt\ = 5\clubs4\diams\ \unbal
+    \item 3\clubs\ = \clubs\ \unbal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = \hearts\ stopper
     \item 2\spades\ = \spades\ stopper
-    \item 2\nt\ = \clubs\ stopper
-    \item 3\clubs\ = sign off (treshold for invite)
+    \item 2\nt\ = both major stoppers
+    \item 3\clubs = \nat
+    \item 3\diams = sign off (treshold for invite)
 \end{itemize}
 
 bidding higher suit denies lower stopper
@@ -68,7 +69,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 5+\clubs\ min
     \item 3\diams\ = 5+\diams\ \gf
     \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
@@ -78,7 +79,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\diams\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 4+\clubs\ min
     \item 3\diams\ = 5+\diams\ min
     \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
