--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -15,7 +15,7 @@
 %%% TITLE: 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-2\nt\alrts opening = 21-22 BAL, may have 5\majs
+2\nt\alrts opening = 21-22 \bal, may have 5\majs
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
@@ -26,7 +26,7 @@
     \item 3\nt\ = 5\spades4\hearts
     \item 4\clubs\ = 55 \majs
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 % should 3s and 3nt be switched?
