--- a/KrysiaBartek2024/source/Transfers1MX.tex
+++ b/KrysiaBartek2024/source/Transfers1MX.tex
@@ -17,35 +17,44 @@
 
 \subsubsection*{1\hearts -- (\dbl) -- ?}
 \begin{itemize}
-    \item \rdbl = 10+
-    \item 1\spades = NAT, 4+\spades, \fonce
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
+    \item \rdbl = 10+ (may have 3\hearts)
+    \item 1\spades = \nat, 4+\spades, \fonce
+    \item 1\nt = \trsf{2\clubs}
+    \item 2\clubs = \trsf{2\diams}
+    \item 2\diams = \trsf{2\hearts}, constructive 8-10
     \item 2\hearts = 4-7, 3\hearts
+    \item 2\spades = \spades shortness, 4\hearts, 7-10, \inv \vimp
+    \item 2\nt = 4\hearts \inv \vimp
+    \item 3\clubs = \clubs+(3)4\hearts \inv \vimp
     \item 3\diams = 4+\hearts, 6-9
-    \item 3\hearts = 0-6 \hcp
+    \item 3\hearts = 4+\hearts, 0-5 \hcp
+    \item 3\spades = 4+\hearts, unspecified singleton \vimp
+    \item 3\nt = 4+\hearts, void \spades
+    \item 4\clubs = 4+\hearts, void \clubs
+    \item 4\diams = 4+\hearts, void \diams
+    \item 4\hearts = to play
 \end{itemize}
 
 \subsubsection*{1\spades -- (\dbl) -- ?}
 \begin{itemize}
-    \item \rdbl = 10+
-    \item 1\nt = $\rightarrow$ 2\clubs
-    \item 2\clubs = $\rightarrow$ 2\diams
-    \item 2\diams = $\rightarrow$ 2\hearts
-    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
+    \item \rdbl = 10+ (may have 3\spades)
+    \item 1\nt = \trsf{ 2\clubs}
+    \item 2\clubs = \trsf{2\diams}
+    \item 2\diams = \trsf{2\hearts}
+    \item 2\hearts = \trsf{2\spades}, constructive 8-10
     \item 2\spades = 4-7, 3\spades
+    \item 2\nt = 4\spades \inv \vimp
+    \item 3\clubs = \clubs+(3)4\spades \inv \vimp
+    \item 3\diams = \diams+(3)4\spades \inv \vimp
     \item 3\hearts = 4+\spades, 6-9
-    \item 3\spades = 0-6 \hcp
+    \item 3\spades = 4+\spades, 0-5 \hcp
+    \item 3\nt =  4+\spades, unspecified singleton \vimp
+    \item 4\clubs = 4+\spades, void \clubs
+    \item 4\diams = 4+\spades, void \diams
+    \item 4\hearts = 4+\spades, void \hearts
+    \item 4\spades = to play
 \end{itemize}
 
 %%% SYSTEM END %%%
-
-\section{Transfer rules}
-\begin{itemize}
-    \item Do not transfer to 5-card suit.
-    \item Transfer to height suit first.
-\end{itemize}
-
 
 \end{document}
