--- a/KrysiaBartek2024/source/acol2c.tex
+++ b/KrysiaBartek2024/source/acol2c.tex
@@ -29,16 +29,16 @@
 \begin{itemize}
     \item \pass\ = good \hearts
     \item 2\spades\ = 5+, \fonce
-    \item 2\nt\ = min BAL, \nf
+    \item 2\nt\ = min, \bal, \nf
 \end{itemize}
 
 any other bid = \gf
 
 \subsubsection*{2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
-    \item 2\nt\ = min BAL
-    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, UNBAL
-    \item 3\hearts, 3\spades, 4\clubs, 4\diams = suit fixed
+    \item 2\nt\ = min, \bal
+    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, \unbal
+    \item 3\hearts, 3\spades, 4\clubs, 4\diams = agreeing suit
 \end{itemize}
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 2\nt\ -- ?}
