--- a/KrysiaBartek2024/source/drury.tex
+++ b/KrysiaBartek2024/source/drury.tex
@@ -27,7 +27,7 @@
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt = Two Tiered Splinters 4+\majs (unspecified singleton, (10)11\dps)
+    \item 3\nt = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
@@ -35,7 +35,7 @@
 \begin{itemize}
     \item 2\hearts = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 2\spades/3\clubs/3\diams = 55(54) Slam Try
     \item 3\spades/4\clubs/4\diams = splinter
     \item 4\hearts = to play
@@ -45,7 +45,7 @@
 \begin{itemize}
     \item 2\spades = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 3\clubs/3\diams/3\hearts = 55(54) Slam Try
     \item 4\clubs/4\diams/4\hearts = splinter
     \item 4\spades = to play
@@ -53,17 +53,17 @@
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\majs \\ ?}
 \begin{itemize}
-    \item 3\anysuit{x} = NAT, unspecified singleton, +4-fit \majs support
+    \item 3\anysuit{x} = \nat, unspecified singleton, +4-fit \majs support
 \end{itemize}
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts over 2\spades = Last Train (says nothing about \hearts)
     \item 2\majs = \soff
-    \item 2\nt = 11, BAL
+    \item 2\nt = 11, \bal
     \item 3\majs = 4-card support
     \item 4\majs = to play
-    \item any other bid = NAT, \inv
+    \item any other bid = \nat, \inv
 \end{itemize}
 
 %%% SYSTEM END %%%
