--- a/KrysiaBartek2024/source/krysia_pawel_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_pawel_strefa.tex
@@ -32,10 +32,10 @@
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntOpening}
 \def\hyperlinkedtitle{\hyperref[sec:overcalling1nt]{4\, Overcalling 1\ntx}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:overcalling1nt}
-\def\hyperlinkedtitle{\hyperref[sec:gadget3c]{5\, Gadget 3\clubs}}
-\item[\hyperlinkedtitle] \hfill \pageref{sec:gadget3c}
-\def\hyperlinkedtitle{\hyperref[sec:majorsAfterGadget]{6\, Majors after gadget}}
-\item[\hyperlinkedtitle] \hfill \pageref{sec:majorsAfterGadget}
+\def\hyperlinkedtitle{\hyperref[sec:checkback3c]{5\, Checkback 3\clubs}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:checkback3c}
+\def\hyperlinkedtitle{\hyperref[sec:majorsAfterCheckback3c]{6\, Majors after checkback 3c}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:majorsAfterCheckback3c}
 \def\hyperlinkedtitle{\hyperref[sec:1ntInterference]{7\, 1\ntx\ -- dealing with interference}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntInterference}
 \def\hyperlinkedtitle{\hyperref[sec:2ntOpening]{8\, 2\ntx\ opening}}
@@ -62,12 +62,12 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 5+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- ?}
@@ -75,29 +75,30 @@
     \item 1\hearts\ = 4+\hearts
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
-    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\clubs\ = 12-14 \bal or \clubs, \gf
     \item 2\diams\ = no 4\majs, 4+\diams, \gf
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ BAL, no 4\majs
-    \item 2\ntx\ = 11-12 BAL
-    \item 3\nt\ = 15-17 BAL
+    \item 2\spades\ = 11+ \bal, no 4\majs
+    \item 2\ntx\ = 11-12 \bal
+    \item 3\nt\ = 15-17 \bal
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 2\clubs \\ ?}
 \begin{itemize}
-    \item 2\diams\ = BAL
-    \item 2\hearts\ = 5\clubs4\hearts\ UNBAL
-    \item 2\spades\ = 5\clubs4\spades\ UNBAL
-    \item 2\nt\ = 5\clubs4\diams\ UNBAL
-    \item 3\clubs\ = \clubs\ UNBAL
+    \item 2\diams\ = \bal
+    \item 2\hearts\ = 5\clubs4\hearts\ \unbal
+    \item 2\spades\ = 5\clubs4\spades\ \unbal
+    \item 2\nt\ = 5\clubs4\diams\ \unbal
+    \item 3\clubs\ = \clubs\ \unbal
 \end{itemize}
 
 \subsubsection*{1\diams\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = \hearts\ stopper
     \item 2\spades\ = \spades\ stopper
-    \item 2\nt\ = \clubs\ stopper
-    \item 3\clubs\ = sign off (treshold for invite)
+    \item 2\nt\ = both major stoppers
+    \item 3\clubs = \nat
+    \item 3\diams = sign off (treshold for invite)
 \end{itemize}
 
 bidding higher suit denies lower stopper
@@ -109,7 +110,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 5+\clubs\ min
     \item 3\diams\ = 5+\diams\ \gf
     \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
@@ -119,7 +120,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\diams\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = BAL min
+    \item 2\nt\ = \bal min
     \item 3\clubs\ = 4+\clubs\ min
     \item 3\diams\ = 5+\diams\ min
     \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
@@ -168,7 +169,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 2\nt = mini splinter
     \item 3\clubs = solid 6\clubs, \inv
     \item 3\diams = solid 6\diams, \inv
-    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\hearts = 3+\spades, \inv
     \item 3\spades = mixed raise
     \item 3\nt = splinter \hearts
     \item 4\clubs = splinter \clubs
@@ -178,15 +179,15 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \section{\texorpdfstring{1\ntx\ opening}{1ntOpening}}\label{sec:1ntOpening}
 
-1\nt\ opening = (14)15-17 BAL
+1\nt\ opening = (14)15-17 \bal
 
 \subsubsection*{1\ntx\ -- ?}
 \begin{itemize}
     \item 2\clubs\ = Stayman
     \item 2\diams\ = forces 2\hearts
     \item 2\hearts\ = forces 2\spades
-    \item 2\spades\ = inv or $\rightarrow$ \clubs
-    \item 2\nt\ = $\rightarrow$ \diams
+    \item 2\spades\ = \inv or \trsf{\clubs}
+    \item 2\nt\ = \trsf{\diams}
     \item 3\clubs\ = Puppet Stayman
     \item 3\diams\ = 55\minor
     \item 3\hearts\ = 3-\spades1-\hearts, 54\minor
@@ -194,7 +195,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 3\nt\ = to play
     \item 4\clubs\ = 55\major
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\spades \\ ?}
@@ -211,7 +212,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \subsubsection*{1\ntx\ -- 3\hearts \\ ?}
 \begin{itemize}
-    \item 3\spades\ = NAT
+    \item 3\spades\ = \nat
     \item 3\nt\ = to play
     \item 4\hearts\ = exclusion, choose \minor
     \item 4\nt\ = choose \minor
@@ -230,13 +231,13 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \subsubsection*{1\ntx\ -- 2\diams \\
                 2\hearts\ -- ?}
 \begin{itemize}
-    \item 2\spades\ = 5\hearts4\spades, inv
+    \item 2\spades\ = 5\hearts4\spades, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\hearts \\
                 2\spades\ -- ?}
 \begin{itemize}
-    \item 3\hearts\ = 5\spades4\hearts, inv
+    \item 3\hearts\ = 5\spades4\hearts, \inv
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- 2\diams \\
@@ -285,17 +286,20 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
 \begin{itemize}
     \item 2\hearts\ = \pass/correct
-    \item 2\spades\ = inv with \hearts
+    \item 2\spades\ = \inv with \hearts
 \end{itemize}
 
-\section{\texorpdfstring{Gadget 3\clubs}{gadget3c}}\label{sec:gadget3c}
+\section{\texorpdfstring{Checkback 3\clubs}{checkback3c}}\label{sec:checkback3c}
+
+Checkback 3\clubs is not forced and does not promise 5th card of the suit.
+It does not deny 3/4\diams.
 
 \subsubsection*{1\clubs -- 1\spades \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 4+\diams
     \item 3\hearts = 5\spades4\hearts
-    \item 3\spades = fixing \spades
+    \item 3\spades = agreeing \spades
 \end{itemize}
 
 \subsubsection*{1\clubs -- 1\spades \\ 2\nt -- 3\clubs}
@@ -309,9 +313,9 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 4+\diams
-    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\hearts = 5\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
@@ -326,10 +330,10 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \subsubsection*{1\diams -- 1\spades \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 3+\diams
     \item 3\hearts = 5\spades4\hearts
-    \item 3\spades = fixing \spades
+    \item 3\spades = agreeing \spades
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\spades \\ 2\nt -- 3\clubs}
@@ -343,13 +347,13 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 
 \subsubsection*{1\diams -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\clubs = gadget
+    \item 3\clubs = checkback
     \item 3\diams = 3+\diams
-    \item 3\hearts = 5\spades4\hearts OR fixing \hearts
+    \item 3\hearts = 5\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
-\subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- 3\clubs}
+\subsubsection*{1\diams -- 1\hearts \\ 2\nt -- 3\clubs}
 \begin{itemize}
     \item 3\diams = 6\diams, no 3\hearts4
     \item 3\hearts = 3\hearts
@@ -358,11 +362,11 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 4\clubs/4\diams/4\hearts = 4\hearts cue
 \end{itemize}
 
-\section{\texorpdfstring{Majors after gadget}{majorsAfterGadget}}\label{sec:majorsAfterGadget}
+\section{\texorpdfstring{Majors after checkback 3c}{majorsAfterCheckback3c}}\label{sec:majorsAfterCheckback3c}
 
 \subsubsection*{1\minor -- 1\hearts \\ 2\nt -- ?}
 \begin{itemize}
-    \item 3\hearts = 5+\hearts4\spades OR fixing \hearts
+    \item 3\hearts = 5+\hearts4\spades OR agreeing \hearts
     \item 3\spades = 4\hearts4\spades
 \end{itemize}
 
@@ -373,11 +377,18 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 4\clubs/4\diams = 4\hearts, cue
 \end{itemize}
 
+\subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\hearts \\ 3\spades -- ?}
+\begin{itemize}
+    \item 3\nt = agreeing \hearts (6+)
+    \item 4\clubs/4\diams = agreeing \spades, cue
+    \item 4\hearts = to play
+\end{itemize}
+
 \subsubsection*{1\minor -- 1\hearts \\ 2\nt -- 3\spades \\ ?}
 \begin{itemize}
     \item 3\nt = no 4\spades, no 4\hearts
-    \item 4\clubs = fixing \hearts
-    \item 4\diams = fixing \spades
+    \item 4\clubs = agreeing \hearts
+    \item 4\diams = agreeing \spades
 \end{itemize}
 
 \section{\texorpdfstring{1\ntx\ -- dealing with interference}{1ntInterference}}\label{sec:1ntInterference}
@@ -404,10 +415,10 @@ SYSTEM ON
     \item \dbl\ = negative
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\hearts, inv+
-    \item 3\diams\ = 1-\diams, inv+
-    \item 3\hearts\ = 5+\spades, inv+
-    \item 3\spades\ = 5+\clubs, inv+
+    \item 3\clubs\ = 5+\hearts, \inv+
+    \item 3\diams\ = 1-\diams, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\spades\ = 5+\clubs, \inv+
     \item 3\nt\ = no \diams\ stopper
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
@@ -418,9 +429,9 @@ SYSTEM ON
     \item \dbl\ = 8+
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
     \item 3\spades\ = 5/5 \minor
     \item 3\nt\ = to play
     \item 4\diams, 4\hearts\ = Texas
@@ -432,9 +443,9 @@ SYSTEM ON
     \item \dbl\ = negative
     \item 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\spades, inv+
-    \item 3\hearts\ = 1-\hearts, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\spades, \inv+
+    \item 3\hearts\ = 1-\hearts, \inv+
     \item 3\spades\ = 55 \minor, \gf
     \item 3\nt\ = no \hearts\ stopper
     \item 4\hearts\ = Texas
@@ -444,10 +455,10 @@ SYSTEM ON
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, inv+
-    \item 3\diams\ = 5+\hearts, inv+
+    \item 3\clubs\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\hearts, \inv+
     \item 3\hearts\ = 55 \minor, \gf
-    \item 3\spades\ = 1-\spades, inv+
+    \item 3\spades\ = 1-\spades, \inv+
     \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
@@ -457,23 +468,23 @@ SYSTEM ON
 \begin{itemize}
     \item \dbl\ = 10+
     \item 3\clubs\ = Stayman
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\clubs) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\diams\ = 5+\hearts, inv+
-    \item 3\hearts\ = 5+\spades, inv+
-    \item 3\spades\ = 5+\diams, inv+
+    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\spades\ = 5+\diams, \inv+
     \item 3\nt\ = to play
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\hearts\ = 5+\spades, inv+
+    \item 3\hearts\ = 5+\spades, \inv+
     \item 3\spades\ = 5+\hearts, \gf
     \item 3\nt\ = to play
 \end{itemize}
@@ -503,7 +514,7 @@ SYSTEM ON
 
 \section{\texorpdfstring{2\ntx\ opening}{2ntOpening}}\label{sec:2ntOpening}
 
-2\nt\alrts opening = 21-22 BAL, may have 5\majs
+2\nt\alrts opening = 21-22 \bal, may have 5\majs
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
@@ -514,7 +525,7 @@ SYSTEM ON
     \item 3\nt\ = 5\spades4\hearts
     \item 4\clubs\ = 55 \majs
     \item 4\diams, 4\hearts\ = Texas
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
 % should 3s and 3nt be switched?
@@ -555,7 +566,7 @@ SYSTEM ON
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt = Two Tiered Splinters 4+\majs (unspecified singleton, (10)11\dps)
+    \item 3\nt = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
@@ -563,7 +574,7 @@ SYSTEM ON
 \begin{itemize}
     \item 2\hearts = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 2\spades/3\clubs/3\diams = 55(54) Slam Try
     \item 3\spades/4\clubs/4\diams = splinter
     \item 4\hearts = to play
@@ -573,7 +584,7 @@ SYSTEM ON
 \begin{itemize}
     \item 2\spades = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 BAL
+    \item 2\nt = 18-20 \bal
     \item 3\clubs/3\diams/3\hearts = 55(54) Slam Try
     \item 4\clubs/4\diams/4\hearts = splinter
     \item 4\spades = to play
@@ -581,17 +592,17 @@ SYSTEM ON
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\majs \\ ?}
 \begin{itemize}
-    \item 3\anysuit{x} = NAT, unspecified singleton, +4-fit \majs support
+    \item 3\anysuit{x} = \nat, unspecified singleton, +4-fit \majs support
 \end{itemize}
 
 \subsubsection*{P -- 1\majs \\ 2\clubs -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts over 2\spades = Last Train (says nothing about \hearts)
     \item 2\majs = \soff
-    \item 2\nt = 11, BAL
+    \item 2\nt = 11, \bal
     \item 3\majs = 4-card support
     \item 4\majs = to play
-    \item any other bid = NAT, \inv
+    \item any other bid = \nat, \inv
 \end{itemize}
 
 \section{\texorpdfstring{Non Serious 3\ntx}{nonSerious3nt}}\label{sec:nonSerious3nt}
@@ -631,16 +642,16 @@ forces partner to show their cue.
 \begin{itemize}
     \item \pass\ = good \hearts
     \item 2\spades\ = 5+, \fonce
-    \item 2\nt\ = min BAL, \nf
+    \item 2\nt\ = min, \bal, \nf
 \end{itemize}
 
 any other bid = \gf
 
 \subsubsection*{2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
-    \item 2\nt\ = min BAL
-    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, UNBAL
-    \item 3\hearts, 3\spades, 4\clubs, 4\diams = suit fixed
+    \item 2\nt\ = min, \bal
+    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, \unbal
+    \item 3\hearts, 3\spades, 4\clubs, 4\diams = agreeing suit
 \end{itemize}
 
 \subsubsection*{2\clubs\ -- 2\diams \\ 2\nt\ -- ?}
@@ -701,7 +712,7 @@ System as after 2\nt\ opening
     \item 2\ntx\ = 6\hearts5\minor\ \gf
     \item 3\clubs\ = 5\hearts5\clubs\ \gf
     \item 3\diams\ = 5\hearts5\diams\ \gf
-    \item 3\hearts\ = fixes \hearts\ \gf
+    \item 3\hearts\ = agreeing \hearts\ \gf
 \end{itemize}
 
 \subsubsection*{1\spades\ -- 1\ntx\ \\ ?}
@@ -715,7 +726,7 @@ System as after 2\nt\ opening
     \item 3\clubs\ = 5\spades5\clubs\ \gf
     \item 3\diams\ = 5\spades5\diams\ \gf
     \item 3\hearts\ = 6\spades5\hearts\ \gf
-    \item 3\spades\ = fixes \spades\ \gf
+    \item 3\spades\ = agreeing \spades\ \gf
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- ?}
@@ -787,13 +798,13 @@ any shortness 9-11, 4-card support, not \gf!
 \subsubsection*{1\hearts\ -- ?}
 \begin{itemize}
     \item 2\spades\ = mini splinter
-    \item 2\nt\ = inv + fit
+    \item 2\nt\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\spades\ -- ?}
 \begin{itemize}
     \item 2\nt\ = mini splinter
-    \item 3\hearts\ = inv + fit
+    \item 3\hearts\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 2\spades \\ ?}
