--- a/KrysiaBartek2024/source/miniSplinter.tex
+++ b/KrysiaBartek2024/source/miniSplinter.tex
@@ -20,13 +20,13 @@ any shortness 9-11, 4-card support, not \gf!
 \subsubsection*{1\hearts\ -- ?}
 \begin{itemize}
     \item 2\spades\ = mini splinter
-    \item 2\nt\ = inv + fit
+    \item 2\nt\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\spades\ -- ?}
 \begin{itemize}
     \item 2\nt\ = mini splinter
-    \item 3\hearts\ = inv + fit
+    \item 3\hearts\ = \inv + fit
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 2\spades \\ ?}
